--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "buu"
-version = "1.0.0"
+version = "1.0.1"
 edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+clap = { version = "4.5.53", features = ["derive"] }
 owo-colors = "4.2.3"
